Fixed typo on index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8">
 </head>
 <body>
+
 	<nav>
 		<ul>
 			<li><a href="#FreeCodeCamp">FreeCodeCamp</a></li>
@@ -27,7 +28,7 @@
 	<div class = "viewable-image"> 
 		<div class="all-images">
 			<img src="On The Rocks.jpg" alt="My friends standing on the rocks" class="slider-image">
-			<img src="Leaning On.jpg" alt="Remi leaning on a big rock" class="slider-image">
+			<img src="Leaning On.jpg" alt="Remi leaning on a BIG rock" class="slider-image">
 			<img src="Rock Pool.jpg" alt="A man made rock pool" class="slider-image"> 
 		</div>
 	</div>
