Moved images to images directory

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 			
 			</p>
 		<h2> Prerequisite Links </h2>
-			<h3 id="CodeWars"><img src="codewars logo.jpg"> CodeWars</h3>
+			<h3 id="CodeWars"><img src="images/codewars logo.jpg"> CodeWars</h3>
 				<p><a href = "https://www.codewars.com/users/CampbellDocherty" target="_blank"> https://www.codewars.com/users/CampbellDocherty</a></p>
-			<h3 id="FreeCodeCamp"><img src="freecodecamp logo.jpg"> Free Code Camp</h3>
+			<h3 id="FreeCodeCamp"><img src="images/freecodecamp logo.jpg"> Free Code Camp</h3>
 				<p><a href="https://www.freecodecamp.org/fcc451c9b47-2332-401c-ba82-1a54e05101e4" target="_blank">https://www.freecodecamp.org/fcc451c9b47-2332-401c-ba82-1a54e05101e4</a></p>
-			<h3 id="Github"><img src="GitHub logo.png"> Github</h3>
+			<h3 id="Github"><img src="images/GitHub logo.png"> Github</h3>
 	<div class = "viewable-image"> 
 		<div class="all-images">
-			<img src="On The Rocks.jpg" alt="My friends standing on the rocks" class="slider-image">
-			<img src="Leaning On.jpg" alt="Remi leaning on a BIG rock" class="slider-image">
-			<img src="Rock Pool.jpg" alt="A man made rock pool" class="slider-image"> 
+			<img src="images/On The Rocks.jpg" alt="My friends standing on the rocks" class="slider-image">
+			<img src="images/Leaning On.jpg" alt="Remi leaning on a BIG rock" class="slider-image">
+			<img src="images/Rock Pool.jpg" alt="A man made rock pool" class="slider-image"> 
 		</div>
 	</div>
 </body>
