Remove excess text and use svgs for logos

--- a/index.html
+++ b/index.html
@@ -1,36 +1,29 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Campbell's Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<meta charset="utf-8">
-</head>
-<body>
-
-	<nav>
-		<ul>
-			<li><a href="#FreeCodeCamp">FreeCodeCamp</a></li>
-			<li><a href="#CodeWars">CodeWars</a></li>
-			<li><a href="#Github">Github</a></li>
-		</ul>
-	</nav>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB">
+	<head>
+		<meta charset="UTF-8"/>
+		<title>Campbell's Portfolio</title>
+		<link rel="stylesheet" type="text/css" href="stylesheet.css">
+		<link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC:700&display=swap" rel="stylesheet">
+	</head>
+	<body>
 	<div id="H1"><h1>Campbell's Portfolio</h1></div>
-		<h2>About Me</h2>
-			<p>
-			
-			</p>
-		<h2> Prerequisite Links </h2>
-			<h3 id="CodeWars"><img src="images/codewars logo.jpg"> CodeWars</h3>
-				<p><a href = "https://www.codewars.com/users/CampbellDocherty" target="_blank"> https://www.codewars.com/users/CampbellDocherty</a></p>
-			<h3 id="FreeCodeCamp"><img src="images/freecodecamp logo.jpg"> Free Code Camp</h3>
-				<p><a href="https://www.freecodecamp.org/fcc451c9b47-2332-401c-ba82-1a54e05101e4" target="_blank">https://www.freecodecamp.org/fcc451c9b47-2332-401c-ba82-1a54e05101e4</a></p>
-			<h3 id="Github"><img src="images/GitHub logo.png"> Github</h3>
-	<div class = "viewable-image"> 
-		<div class="all-images">
-			<img src="images/On The Rocks.jpg" alt="My friends standing on the rocks" class="slider-image">
-			<img src="images/Leaning On.jpg" alt="Remi leaning on a BIG rock" class="slider-image">
-			<img src="images/Rock Pool.jpg" alt="A man made rock pool" class="slider-image"> 
+		<div id="logos">
+			<ul>
+				<li><a id="CodeWars" href = "https://www.codewars.com/users/CampbellDocherty" target="_blank">
+					<img src="images/codewars.svg" class="logo"></a></li>
+				<li><a id="FreeCodeCamp" href="https://www.freecodecamp.org/fcc451c9b47-2332-401c-ba82-1a54e05101e4" target="_blank">
+					<img src="images/freecodecamp.svg" class="logo"></a></li>
+				<li><a id="Github" href="https://github.com/CampbellDocherty/CampbellDocherty.github.io">
+					<img src="images/github.svg" class="logo"></a></li>
+			</ul>
 		</div>
-	</div>
-</body>
+		<div class = "viewable-image"> 
+			<div class="all-images">
+				<img src="images/On The Rocks.jpg" alt="My friends standing on the rocks" class="slider-image">
+				<img src="images/Leaning On.jpg" alt="Remi leaning on a BIG rock" class="slider-image">
+				<img src="images/Rock Pool.jpg" alt="A man made rock pool" class="slider-image"> 
+			</div>
+		</div>
+	</body>
 </html>
