--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB">
 	<head>
 		<meta charset="UTF-8"/>
-		<title>Campbell's Portfolio</title>
+		<title>Campbell's Application</title>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
 		<link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC:700&display=swap" rel="stylesheet">
 	</head>
 	<body>
-	<div id="H1"><h1>Campbell's Portfolio</h1></div>
+	<div id="H1"><h1>Campbell Docherty</h1></div>
 		<div id="logos">
 			<ul>
 				<li><a id="CodeWars" href = "https://www.codewars.com/users/CampbellDocherty" target="_blank">
