Add hover effects for svg logo's

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 		<div id="logos">
 			<ul>
 				<li><a id="CodeWars" href = "https://www.codewars.com/users/CampbellDocherty" target="_blank">
-					<img src="images/codewars.svg" class="logo"></a></li>
+					<img src="images/codewars.svg" class="logo" id="cwsvg"></a></li>
 				<li><a id="FreeCodeCamp" href="https://www.freecodecamp.org/fcc451c9b47-2332-401c-ba82-1a54e05101e4" target="_blank">
-					<img src="images/freecodecamp.svg" class="logo"></a></li>
+					<img src="images/freecodecamp.svg" class="logo" id="fccsvg"></a></li>
 				<li><a id="Github" href="https://github.com/CampbellDocherty/CampbellDocherty.github.io">
-					<img src="images/github.svg" class="logo"></a></li>
+					<img src="images/github.svg" class="logo" id="ghsvg"></a></li>
 			</ul>
 		</div>
 		<div class = "viewable-image"> 
