Add application text with styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Campbell's Application</title>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
 		<link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC:700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
 	</head>
 	<body>
 	<div id="H1"><h1>Campbell Docherty</h1></div>
@@ -18,6 +19,24 @@
 					<img src="images/github.svg" class="logo" id="ghsvg"></a></li>
 			</ul>
 		</div>
+		<p class="paragraph">
+			Broadly speaking I am interested in coding and a career in web development. On a base 
+			level Founders and Coders can provide a platform from which to achieve this goal. 
+			Specifically, I am attracted to Founders and Coders for two main reasons. The programme’s 
+			focus on socially beneficial web apps is particularly appealing. The power of coding to 
+			galvanise social welfare projects is key to a fair distribution of tech resources. Coding is 
+			a sphere that is often misunderstood or wholly ignored by the general public. There has to be 
+			initiatives like Founders and Coders that can provide coding skills in a space dedicated to 
+			‘tech for better’. This ethos - of learning to give back - serves to represent all the 
+			positive aspects that I have discovered in the coding community over the last few months - 
+			free online resources and a community willing to provide guidance on countless forums. I am 
+			excited at the prospect of working on socially beneficial web apps and mentoring the next 
+			cohort of students. More personally, the learning process at founders and coders - peer led - aligns
+			 with the way that I prefer to learn. Throughout the course of the prerequisites when I encountered 
+			 difficulties, I would turn to friends who were more advanced at coding. Having someone in person 
+			 to guide me through problems was the way in which I truly started to grasp the underlying mechanisms 
+			 of JavaScript. I think I would be a good fit for Founders and Coders in this regard as well.
+		</p>
 		<div class = "viewable-image"> 
 			<div class="all-images">
 				<img src="images/On The Rocks.jpg" alt="My friends standing on the rocks" class="slider-image">
