Alter application text

--- a/index.html
+++ b/index.html
@@ -20,22 +20,23 @@
 			</ul>
 		</div>
 		<p class="paragraph">
-			Broadly speaking I am interested in coding and a career in web development. On a base 
-			level Founders and Coders can provide a platform from which to achieve this goal. 
-			Specifically, I am attracted to Founders and Coders for two main reasons. The programme’s 
-			focus on socially beneficial web apps is particularly appealing. The power of coding to 
-			galvanise social welfare projects is key to a fair distribution of tech resources. Coding is 
-			a sphere that is often misunderstood or wholly ignored by the general public. There has to be 
-			initiatives like Founders and Coders that can provide coding skills in a space dedicated to 
-			‘tech for better’. This ethos - of learning to give back - serves to represent all the 
-			positive aspects that I have discovered in the coding community over the last few months - 
-			free online resources and a community willing to provide guidance on countless forums. I am 
-			excited at the prospect of working on socially beneficial web apps and mentoring the next 
-			cohort of students. More personally, the learning process at founders and coders - peer led - aligns
-			 with the way that I prefer to learn. Throughout the course of the prerequisites when I encountered 
-			 difficulties, I would turn to friends who were more advanced at coding. Having someone in person 
-			 to guide me through problems was the way in which I truly started to grasp the underlying mechanisms 
-			 of JavaScript. I think I would be a good fit for Founders and Coders in this regard as well.
+			 Originally from West London, I graduted from King's College with a degree in Philosophy, having
+			 taken classes in film and photography too. More recently I have developed an interest in coding 
+			 and I am considering a career in web development. Founders and Coders can provide a platform from 
+			 which to achieve this goal. Specifically, I am attracted to Founders and Coders for two main reasons. 
+			 The programme’s focus on socially beneficial web apps is particularly appealing. The power of coding 
+			 to galvanise social welfare projects is key to a fair distribution of tech resources. There has
+			 to be initiatives like Founders and Coders that can provide coding skills in a space dedicated to 
+			 ‘tech for better’. This ethos of learning to give back, serves to represent all the positive aspects 
+			 that I have discovered in the coding community over the last few months - free online resources and a 
+			 community willing to provide guidance on countless forums. I am excited at the prospect of 
+			 working on socially beneficial web apps and mentoring the next cohort of students. More 
+			 personally, the peer-led learning process at Founders and Coders aligns with the way that I 
+			 prefer to learn. Throughout the course of the prerequisites when I encountered difficulties 
+			 and had exhausted other methods of research, I would turn to friends who were more advanced 
+			 at coding. Having someone in person to guide me through problems was the way in which I truly 
+			 started to grasp the underlying mechanisms of JavaScript. I think I would be a good fit for 
+			 Founders and Coders in this regard as well.
 		</p>
 		<div class = "viewable-image"> 
 			<div class="all-images">
