add span dots for image carousel and remove image styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<img src="images/codewars.svg" class="logo" id="cwsvg"></a></li>
 				<li><a id="FreeCodeCamp" href="https://www.freecodecamp.org/fcc451c9b47-2332-401c-ba82-1a54e05101e4" target="_blank">
 					<img src="images/freecodecamp.svg" class="logo" id="fccsvg"></a></li>
-				<li><a id="Github" href="https://github.com/CampbellDocherty/CampbellDocherty.github.io">
+				<li><a id="Github" href="https://github.com/CampbellDocherty/CampbellDocherty.github.io" target="_blank">
 					<img src="images/github.svg" class="logo" id="ghsvg"></a></li>
 			</ul>
 		</div>
@@ -38,11 +38,16 @@
 			 started to grasp the underlying mechanisms of JavaScript. I think I would be a good fit for 
 			 Founders and Coders in this regard as well.
 		</p>
-		<div class = "viewable-image"> 
-			<div class="all-images">
+		<div class = "all-images"> 
+			<div class="viewable-image">
 				<img src="images/On The Rocks.jpg" alt="My friends standing on the rocks" class="slider-image">
 				<img src="images/Leaning On.jpg" alt="Remi leaning on a BIG rock" class="slider-image">
 				<img src="images/Rock Pool.jpg" alt="A man made rock pool" class="slider-image"> 
+			</div>
+			<div>
+				<span class="dot" onclick="Slide(1)"></span>
+				<span class="dot" onclick="Slide(2)"></span>
+				<span class="dot" onclick="Slide(3)"></span>
 			</div>
 		</div>
 	</body>
