--- a/index.html
+++ b/index.html
@@ -38,16 +38,19 @@
 			 started to grasp the underlying mechanisms of JavaScript. I think I would be a good fit for 
 			 Founders and Coders in this regard as well.
 		</p>
-		<div class = "all-images"> 
-			<div class="viewable-image">
+		<div class = "viewable-image">
+			<span id="image-1"></span>
+		    <span id="image-2"></span>
+			<span id="image-3"></span> 
+			<div class="all-images">
 				<img src="images/On The Rocks.jpg" alt="My friends standing on the rocks" class="slider-image">
 				<img src="images/Leaning On.jpg" alt="Remi leaning on a BIG rock" class="slider-image">
 				<img src="images/Rock Pool.jpg" alt="A man made rock pool" class="slider-image"> 
 			</div>
-			<div>
-				<span class="dot" onclick="Slide(1)"></span>
-				<span class="dot" onclick="Slide(2)"></span>
-				<span class="dot" onclick="Slide(3)"></span>
+			<div class="nav-container">
+				<a href="#image-1" class="nav-button"></a>
+				<a href="#image-2" class="nav-button"></a>
+				<a href="#image-3" class="nav-button"></a>
 			</div>
 		</div>
 	</body>
