--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 		    <span id="image-2"></span>
 			<span id="image-3"></span> 
 			<div class="all-images">
-				<img src="images/On The Rocks.jpg" alt="My friends standing on the rocks" class="slider-image">
-				<img src="images/Leaning On.jpg" alt="Remi leaning on a BIG rock" class="slider-image">
-				<img src="images/Rock Pool.jpg" alt="A man made rock pool" class="slider-image"> 
+				<img src="images/On The Rocks.jpg" alt="My friends standing on the rocks" class="carousel-image">
+				<img src="images/Leaning On.jpg" alt="Remi leaning on a BIG rock" class="carousel-image">
+				<img src="images/Rock Pool.jpg" alt="A man made rock pool" class="carousel-image"> 
 			</div>
 			<div class="nav-container">
 				<a href="#image-1" class="nav-button"></a>
