Add scan tag styling and carousel functionality

--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
 			 Founders and Coders in this regard as well.
 		</p>
 		<div class = "viewable-image">
-			<span id="image-1"></span>
-		    <span id="image-2"></span>
-			<span id="image-3"></span> 
+			<span id="carousel-image-1"></span>
+		    <span id="carousel-image-2"></span>
+			<span id="carousel-image-3"></span> 
 			<div class="all-images">
 				<img src="images/On The Rocks.jpg" alt="My friends standing on the rocks" class="carousel-image">
 				<img src="images/Leaning On.jpg" alt="Remi leaning on a BIG rock" class="carousel-image">
 				<img src="images/Rock Pool.jpg" alt="A man made rock pool" class="carousel-image"> 
 			</div>
 			<div class="nav-container">
-				<a href="#image-1" class="nav-button"></a>
-				<a href="#image-2" class="nav-button"></a>
-				<a href="#image-3" class="nav-button"></a>
+				<a href="#carousel-image-1" class="nav-button"></a>
+				<a href="#carousel-image-2" class="nav-button"></a>
+				<a href="#carousel-image-3" class="nav-button"></a>
 			</div>
 		</div>
 	</body>
