Change styling and text of paragraph

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 			</ul>
 		</div>
 		<p class="paragraph">
-			 Originally from West London, I graduted from King's College with a degree in Philosophy, having
-			 taken classes in film and photography too. More recently I have developed an interest in coding 
+			 Last summer I graduted from King's College London with a degree in Philosophy, having
+			 taken classes in film and photography too (below I have included some of the photos I have taken). 
+			 More recently I have developed an interest in coding 
 			 and I am considering a career in web development. Founders and Coders can provide a platform from 
 			 which to achieve this goal. Specifically, I am attracted to Founders and Coders for two main reasons. 
 			 The programme’s focus on socially beneficial web apps is particularly appealing. The power of coding 
