Alter styling of logos and carousel buttons

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 			<img class="slides" src="images/Leaning On.jpg">
 			<img class="slides" src="images/On The Rocks.jpg">
 			<img class="slides" src="images/Rock Pool.jpg">
-			<button onclick="change_slide(-1)">&#10094;</button>
-			<button onclick="change_slide(1)">&#10095;</button>
+			<button onclick="change_slide(-1)" id="left-button" class="buttons">&#10094;</button>
+			<button onclick="change_slide(1)" id="right-button" class="buttons">&#10095;</button>
 		</div>
 	</body>
 </html>
