Added alt tags to images

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 		<div id="logos">
 			<ul>
 				<li><a id="CodeWars" href = "https://www.codewars.com/users/CampbellDocherty" target="_blank">
-					<img src="images/codewars.svg" class="logo" id="cwsvg"></a></li>
+					<img src="images/codewars.svg" class="logo" id="cwsvg" alt="codewars logo"></a></li>
 				<li><a id="FreeCodeCamp" href="https://www.freecodecamp.org/fcc451c9b47-2332-401c-ba82-1a54e05101e4" target="_blank">
-					<img src="images/freecodecamp.svg" class="logo" id="fccsvg"></a></li>
+					<img src="images/freecodecamp.svg" class="logo" id="fccsvg" alt="freecodecamp logo"></a></li>
 				<li><a id="Github" href="https://github.com/CampbellDocherty/CampbellDocherty.github.io" target="_blank">
-					<img src="images/github.svg" class="logo" id="ghsvg"></a></li>
+					<img src="images/github.svg" class="logo" id="ghsvg" alt="github logo"></a></li>
 			</ul>
 		</div>
 		<p class="paragraph">
@@ -41,9 +41,9 @@
 			 Founders and Coders in this regard as well.
 		</p>
 		<div id="slides-container">
-			<img class="slides" src="images/Leaning On.jpg">
-			<img class="slides" src="images/On The Rocks.jpg">
-			<img class="slides" src="images/Rock Pool.jpg">
+			<img class="slides" src="images/Leaning On.jpg" alt="Remi leaning on a rock">
+			<img class="slides" src="images/On The Rocks.jpg" alt="My three friends standing by a rock pool">
+			<img class="slides" src="images/Rock Pool.jpg" alt="A top-down view of the rock pool">
 			<button onclick="change_slide(-1)" id="left-button" class="buttons">&#10094;</button>
 			<button onclick="change_slide(1)" id="right-button" class="buttons">&#10095;</button>
 		</div>
