Added rel for links

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	<div id="H1"><h1>Campbell Docherty</h1></div>
 		<div id="logos">
 			<ul>
-				<li><a id="CodeWars" href = "https://www.codewars.com/users/CampbellDocherty" target="_blank">
+				<li><a id="CodeWars" href = "https://www.codewars.com/users/CampbellDocherty" rel="noreferrer" target="_blank">
 					<img src="images/codewars.svg" class="logo" id="cwsvg" alt="codewars logo"></a></li>
-				<li><a id="FreeCodeCamp" href="https://www.freecodecamp.org/fcc451c9b47-2332-401c-ba82-1a54e05101e4" target="_blank">
+				<li><a id="FreeCodeCamp" href="https://www.freecodecamp.org/fcc451c9b47-2332-401c-ba82-1a54e05101e4" rel="noreferrer" target="_blank">
 					<img src="images/freecodecamp.svg" class="logo" id="fccsvg" alt="freecodecamp logo"></a></li>
-				<li><a id="Github" href="https://github.com/CampbellDocherty/CampbellDocherty.github.io" target="_blank">
+				<li><a id="Github" href="https://github.com/CampbellDocherty/CampbellDocherty.github.io" rel="noreferrer" target="_blank">
 					<img src="images/github.svg" class="logo" id="ghsvg" alt="github logo"></a></li>
 			</ul>
 		</div>
